fix: positioning and gap in navbar{services, vendor}

--- a/src/app/profile/profile.css
+++ b/src/app/profile/profile.css
@@ -1,6 +1,8 @@
 .PsPfContainer {
   display: flex;
-  width: min(93%, 1443px);
+  max-width: 1444px;
+  min-width: 93%;
+  width: 93%;
   height: 100%;
   margin: 6rem auto 0;
   padding-top: 2rem;
@@ -25,7 +27,7 @@
 }
 
 .ProfileChildren {
-  width: 75%;
+  width: 61%;
 }
 
 
